<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#673AB7"
    android:layout_height="match_parent">

<ImageButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/btn_Guia1"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="30dp"
    android:src="@drawable/ic_filter_1_64"
    android:background="#673AB7"
    android:text="@string/btn_Guia1"/>
<ImageButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/btn_Guia2"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="30dp"
    android:src="@drawable/ic_filter_2_64"
    android:background="#673AB7"
    android:text="@string/btn_Guia2"
    />
<ImageButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/btn_Guia3"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="30dp"
    android:src="@drawable/ic_filter_3_64"
    android:background="#673AB7"
    android:text="@string/btn_Guia3"/>


</LinearLayout>