<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layApartado"
    android:background="#673AB7"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <TextView
       android:id="@+id/Titulo_apartado"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_gravity="center_horizontal"
       android:layout_centerHorizontal="true"
       android:textStyle="bold"
       android:text="APARTADO"
       android:textColor="@android:color/white"
       android:layout_marginTop="15dp"
       android:textSize="12pt" />
    <TextView
        android:id="@+id/instrucciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="INSTRUCCIONES"
        android:layout_centerHorizontal="true"
        android:textSize="8pt"
        android:layout_below="@id/Titulo_apartado"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffbf4e"
        android:layout_marginTop="10pt" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_anterior"
        android:text="@string/btn_Atras"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_siguiente"
        android:text="@string/btn_Siguiente"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/btn_anterior"
        android:layout_alignParentBottom="true"/>


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rdGroup"
        android:orientation="vertical"
        android:layout_marginBottom="10pt"
        android:layout_above="@+id/btn_anterior">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dolor_Ninguno"
            android:id="@+id/radioButtonNinguno"
            android:checked="false"
            android:textColor="@android:color/white"
            android:textSize="8pt" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dolor_Poco"
            android:id="@+id/radioButtonPoco"
            android:checked="false"
            android:textColor="@android:color/white"
            android:textSize="8pt" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dolor_Bastante"
            android:id="@+id/radioButtonBastante"
            android:checked="false"
            android:textColor="@android:color/white"
            android:textSize="8pt" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dolor_Mucho"
            android:id="@+id/radioButtonMucho"
            android:checked="false"
            android:textColor="@android:color/white"
            android:textSize="8pt" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dolor_Muchisimo"
            android:id="@+id/radioButtonMuchisimo"
            android:checked="false"
            android:textColor="@android:color/white"
            android:textSize="8pt" />

    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_question"
        android:text="Question aAAaaa"
        android:paddingBottom="30dp"
        android:layout_above="@id/rdGroup"

        android:layout_gravity="center_horizontal"
        android:textColor="#ffbf4e"
        android:textSize="10pt" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_question"
        android:layout_below="@id/instrucciones"
        android:layout_centerHorizontal="true"
        android:text="Preguntas xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
        android:textColor="@android:color/white"
        android:layout_marginTop="20pt" />

</RelativeLayout>