<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="#673AB7"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".IMCActivity"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Peso"
        android:id="@+id/Peso"
        android:textSize="10pt"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:digits="2" />

    <EditText
        android:layout_width="70px"
        android:layout_height="wrap_content"
        android:id="@+id/InputPeso"
        android:maxLength="5"
        android:layout_marginTop="10pt"
        android:textColor="@android:color/white"
        android:numeric="decimal"
        android:ems="10"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:inputType="numberDecimal"
        android:linksClickable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Altura"
        android:id="@+id/Altura"
        android:layout_gravity="center"
        android:textSize="10pt"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_marginTop="10pt" />

    <EditText
        android:layout_width="70px"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/InputAltura"
        android:maxLength="3"
        android:layout_marginTop="10pt"
        android:numeric="decimal"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:editable="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_Calcular"
        android:id="@+id/calcular"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="10pt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ResultadoIMC"
        android:id="@+id/IMC"
        android:textSize="10pt"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_marginTop="10pt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ResultIMC"
        android:layout_gravity="center"
        android:layout_marginBottom="34dp"
        android:textColor="#ffbf4e"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="8pt"
        android:textStyle="bold" />


</LinearLayout>
