<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#673AB7">

    <TextView
        android:id="@+id/Titulo_apartado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:text="INICIO DE CUESTIONARIO"
        android:textColor="@android:color/white"
        android:layout_marginTop="15dp"
        android:textSize="12pt" />
    <TextView
        android:id="@+id/instrucciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="INSTRUCCIONES"
        android:layout_centerHorizontal="true"
        android:textSize="8pt"
        android:layout_below="@id/Titulo_apartado"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffbf4e"
        android:layout_marginTop="10pt"
        android:textStyle="bold" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_anterior"
        android:text="@string/btn_Atras"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="true"
        android:enabled="false" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_siguiente"
        android:text="@string/btn_Siguiente"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/btn_anterior"
        android:layout_alignParentBottom="true"
        android:enabled="false"
        android:clickable="true" />





    <ImageView
    android:layout_width="200px"
    android:layout_height="200px"
    android:id="@+id/imageView"
    android:src="@drawable/swipe_right"
    android:background="#673AB7"
        android:layout_gravity="center"
        android:layout_alignTop="@+id/imageView2"
        android:layout_toLeftOf="@+id/imageView2"
         />
    <ImageView
        android:layout_width="200px"
        android:layout_height="200px"
        android:id="@+id/imageView2"
        android:src="@drawable/swipe_left"
        android:background="#673AB7"
        android:layout_gravity="center"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/btn_siguiente"
         />

    <TextView
        android:layout_width="450px"
        android:layout_height="wrap_content"
        android:text="@string/Deslizar"
        android:id="@+id/textView10"
        android:textColor="#ffbf4e"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/instrucciones"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:textSize="7pt" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="INICIAR"
        android:id="@+id/inicio"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp" />


</RelativeLayout>