<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_column="2" android:layout_width="match_parent"
    android:background="#673AB7"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/EntradaDatos"
        android:id="@+id/textView"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/white" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Nivel de Dolor"
        android:id="@+id/Dolor"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"

        android:textStyle="bold"
        android:textColor="@android:color/white" />

    <EditText
        android:layout_width="40pt"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/txtDolor"
        android:gravity="right"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textColor="#ffbf4e"
        android:inputType="number"
        android:maxLength="2" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Peso"
        android:id="@+id/textView2"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

    <EditText
        android:layout_width="40pt"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/txtPeso"
        android:gravity="right"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="35dp"
        android:textAlignment="center"
        android:textColor="#ffbf4e"
        android:inputType="numberDecimal"
        android:maxLength="4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewAltura"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/Altura" />
    <EditText
        android:layout_width="40pt"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/txtAltura"
        android:numeric="decimal"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"

        android:layout_weight="1"
        android:textAlignment="center"
        android:textColor="#ffbf4e"
        android:maxLength="4"
        android:inputType="number" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/IMC"
        android:layout_gravity="center"
        android:text="Introduce tu IMC"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textColor="@android:color/white" />
    <EditText
        android:layout_width="40pt"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:id="@+id/txtIMC"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="#ffbf4e"
        android:maxLength="4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_Enviar"
        android:id="@+id/btn_Enviar"
        android:layout_gravity="center"
        android:layout_marginTop="15dp" />

</LinearLayout>